# ugly

./: .gitignore  CMakeLists.txt  LICENSE.bsd3  LICENSE.md  README.md
lib/: CMakeLists.txt
lib/include/: ugly.h
lib/src/: ugly.c
samples/: CMakeLists.txt
samples/simple/: CMakeLists.txt  main.c
